--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Semesteraufgabe C)
 
 set(CMAKE_C_STANDARD 90)
 
-add_executable(Semesteraufgabe main.c "glorifiedifstatements(ai).c" "glorifiedifstatements(ai).h" logic.c logic.h console.c console.h)
+add_executable(Semesteraufgabe main.c "ai.c" "ai.h" logic.c logic.h console.c console.h)
